compiler/testData/diagnostics/tests/inline/nonPublicMember/localFun.kt
public fun test() {

    fun localFun() {

    }

    <!NOT_YET_SUPPORTED_IN_INLINE!>inline fun localFun2() {
        localFun()
    }<!>

}